# pde_core_cpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: ALGORITHMS.md  ARCHITECTURE.md
include/pde_core/amr/: box1d.hpp  box2d.hpp  clustering2d.hpp  flux_register1d.hpp  flux_register2d.hpp  ghost_fill2d.hpp  mesh_block1d.hpp  mesh_block2d.hpp  mesh_hierarchy1d.hpp  mesh_hierarchy2d.hpp  regrid1d.hpp  regrid2d.hpp
include/pde_core/bc/: outflow.hpp  outflow_2d.hpp  periodic.hpp  periodic_2d.hpp
include/pde_core/core/: cell_traits.hpp  openmp.hpp  types.hpp
include/pde_core/mesh/: domain1d.hpp  domain2d.hpp  field1d.hpp  field2d.hpp
tests/: CMakeLists.txt  test_bc.cpp  test_clustering.cpp  test_field.cpp  test_flux_register.cpp  test_ghost_fill.cpp  test_mesh_block.cpp  test_mesh_hierarchy.cpp  test_regrid.cpp
